fix: padding on small screen and icon color message list

--- a/packages/storybook/src/templates/globals.css
+++ b/packages/storybook/src/templates/globals.css
@@ -77,6 +77,12 @@ body {
   display: flex;
   justify-self: center;
   column-gap: var(--rhc-space-700);
+  @media (width <= 780px) {
+    --utrecht-page-content-padding-block-end: var(--rhc-space-150);
+    --utrecht-page-content-padding-block-start: var(--rhc-space-150);
+    --utrecht-page-padding-inline-end: var(--rhc-space-300);
+    --utrecht-page-padding-inline-start: var(--rhc-space-300);
+  }
 }
 .rhc-side-nav {
   min-inline-size: 230px;
